added bookings model CRUD
